fd_ws/fd_ws/log/build_2024-08-28_19-35-00/srv_turtle/stderr.log
  File "/home/cagla/fd_ws/install/srv_turtle/lib/python3.10/site-packages/srv_turtle/service_node.py", line 37
    if SetBool.Request.data
                           ^
SyntaxError: expected ':'

